fix upload cover
